--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://aqeela66.github.io/Pizza-Ordering-App/"
   "name": "pizza-ordering-app",
   "version": "0.1.0",
   "private": true,
