--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://aqeela66.github.io/Pizza-Ordering-App/"
+  "homepage": "https://aqeela66.github.io/pizza-ordering-app/"
   "name": "pizza-ordering-app",
   "version": "0.1.0",
   "private": true,
