--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://aqeela66.github.io/pizza-ordering-app/"
-  "name": "pizza-ordering-app",
+  "homepage": "https://aqeela66.github.io/Pizza-Ordering-App/"
+  "name" : "pizza-ordering-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
